Add start scripts for various GCs
- add start scripts for various GCs
- add GC options to shrink heap